...
    <string name="app_title">Birds of a Feather</string>
    <string name="default_person_text">Missing person!</string>
    <string name="title_activity_person_detail">PersonDetail</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="go_back">Go Back</string>
    <string name="first_name">First Name</string>
...
    <string name="welcome">Welcome!</string>
    <string name="welcome_mock">Add New Student</string>
    <string name="bluetooth_required">Bluetooth Required</string>
    <string name="bluetooth_prompt">Bluetooth connection is required for this app. Please turn on Bluetooth for your device in your settings.</string>
    <string name="paste_the_url_here">Paste the URL here!</string>
    <string name="add_profile_picture">Add Profile Picture</string>
    <string name="go_to_settings">Request Permissions</string>
    <string name="not_now">Enable in Settings</string>

    <!-- Strings for add classes activity -->
    <string name="add_your_classes">Add Classes</string>
    <string name="edit_your_classes">Edit Class</string>
    <string name="current_added_classes">Added Classes:</string>
    <string name="add_another_class">Add another Class</string>
...
