...
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/pfp_field_url"
        style="@style/bof_textbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginStart="@dimen/textbox_margin"
        android:layout_marginEnd="@dimen/textbox_margin"
        android:hint="@string/paste_the_url_here"
        app:layout_constraintTop_toBottomOf="@id/pfp_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <edu.ucsd.cse110.lab5_room.ui.BoFButton
        android:id="@+id/pfp_btn_next"
        style="@style/btn_standard"
        android:layout_width="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="@drawable/bof_btn"
        android:text="@string/next"
        android:textAppearance="@style/btn_login"
...
